--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.23",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
+    "@types/node": "^20.4.2",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0"
   }
 }
